apps/vote-ui/nats/service.yaml
---
# Source: votingapp/templates/vote-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote-ui
  name: vote-ui
spec:
  type: NodePort
  ports:
    - name: "vote-ui-service"
      port: 80
      targetPort: 80
      nodePort: 31010
  selector:
    app: vote-ui
