apps/vote-ui/nats/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ui
spec:
  rules:
    - host: "nats.vote.votingapp.162.38.112.195.sslip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-ui
                port:
                  number: 80
